Fix action button view on mobile

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -830,9 +830,8 @@ span.small {
 
 .fixed-actions-bottom {
   position: fixed;
-  bottom: 2%;
-  left: 85%;
-  z-index: 1030;
+  bottom: 10px;
+  right: 25px; 
 }
 
 /* ------------------- ABOUT: Staff Section (Frames) ------------------ */
